# JurySane-Remake

./: .gitignore  README.md  pyproject.toml
backend/jurysane/: __init__.py  cli.py  config.py  main.py  utils.py
backend/jurysane/agents/: __init__.py  base.py  defense.py  judge.py  jury.py  prosecutor.py  witness.py
backend/jurysane/api/: __init__.py
backend/jurysane/api/routes/: __init__.py  cases.py  trial.py
backend/jurysane/data/: __init__.py  case_store.py  generated_cases.py  sample_cases.py
backend/jurysane/models/: __init__.py  base.py  trial.py
backend/jurysane/services/: __init__.py  trial_service.py  turn_manager.py
backend/tests/: __init__.py  test_main.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/modals/: CasePreviewModal.tsx
frontend/src/components/trial/: EvidenceManager.tsx  PhaseIndicator.tsx  PhaseManager.tsx  TrialChat.tsx  TrialNotes.tsx  TrialSidebar.tsx
frontend/src/components/ui/: Toaster.tsx
frontend/src/pages/: CaseSelectionPage.tsx  EvidenceManagementPage.tsx  HomePage.tsx  LandingPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  RoleSelectionPage.tsx  TrialHistoryPage.tsx  TrialPage.tsx  TrialPageNew.tsx  TrialSetupPage.tsx
frontend/src/services/: caseService.ts
frontend/src/store/: trialStore.ts
frontend/src/styles/: design-system.css  trial-components.css
frontend/src/test/: setup.ts
frontend/src/types/: trial.ts
scripts/: dev.py  setup.bat  setup.sh
